# potential-engine

./: .depanalysis.example.yml  .gitignore  ARCHITECTURE_FIXES.md  CLAUDE.md  NDEPEND_RULES.md  README.md  ROADMAP.md  SPECIFICATION.md  TIER2_IMPLEMENTATION.md  pyproject.toml
.github/workflows/: architecture-metrics.yml  architecture-validation.yml  pr-enrichment.yml
depanalysis/: __init__.py  advanced_analytics.py  architectural_rules.py  cli.py  cross_language_analyzer.py  csharp_analyzer.py  db_manager.py  diff_analysis.py  ecosystem_analyzer.py  git_analyzer.py  ide_integration.py  metrics.py  migration_planning.py  structure_analyzer.py  tree_sitter_base.py  tree_sitter_csharp.py  tree_sitter_multi_lang.py  tree_sitter_python.py  tree_sitter_typescript.py  typescript_analyzer.py
docs/: .gitignore  TIER4_FEATURES.md  observablehq.config.js  package-lock.json  package.json
docs/data/: api-boundaries.json.py
docs/src/: authors.md  compare.md  coupling.md  custom.css  index.md  migration.md
docs/src/cross-language/: api-boundaries.md  dependencies.md  polyglot.md
docs/src/data/: all-api-boundaries.json.py  all-code-age-metrics.json.py  all-commit-patterns.json.py  all-coupling.json.py  (+42 more)
ide-integration/vscode-extension-template/: README.md
migrations/: python2to3.example.yml
schema/: history.sql  structure.sql
scripts/: generate_examples.py
tests/: README.md  __init__.py  conftest.py  test_advanced_analytics.py  test_examples.py  test_integration.py  test_structural_coupling.py  test_temporal_coupling.py  test_tier2_features.py  test_tier4_features.py
(+18 files in other folders)
